--- a/src/components/AddToCartBtn/AddToCartBtn.css
+++ b/src/components/AddToCartBtn/AddToCartBtn.css
@@ -1,9 +1,11 @@
 .buy-btn {
+    font-weight: 700;
     color: var(--text-primary);
     background-color: var(--background);
     transition: all .5s;
-    border: 0.1rem solid #909090;
-    font-weight: 700;
+    border: 0.1rem solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 0px #ccc;
     cursor: pointer;
 }
 
