--- a/src/components/ProductTable/ProductTable.css
+++ b/src/components/ProductTable/ProductTable.css
@@ -1,14 +1,16 @@
-.table-header {
-    color: var(--text-primary);
-    background-color: var(--background);
-    transition: all .5s;
+.product-display-area {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
-.table-header > tr > th {
-    text-align: top; 
-    font-weight: 700;
+.product-card {
+    margin: 1rem;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px 5px #bbb;
 }
 
 .product-pic {
     max-width: 10rem;
+    padding: 1rem;
 }
